[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/grid.gd" type="Script" id=1]
[ext_resource path="res://src/text_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/grid_panel.gd" type="Script" id=4]
[ext_resource path="res://src/gui.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.811765, 0.776471, 0.721569, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 0.627451, 0.576471, 0.556863, 1 )
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.811765, 0.776471, 0.721569, 1 )
border_width_left = 1
border_width_right = 1
border_color = Color( 0.627451, 0.576471, 0.556863, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.811765, 0.776471, 0.721569, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.811765, 0.776471, 0.721569, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.627451, 0.576471, 0.556863, 1 )
border_blend = true
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_left = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_left = 8
border_width_bottom = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_left = 8
border_width_top = 8
border_width_bottom = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_top = 8
border_width_right = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.223529, 0.192157, 0.294118, 1 )
border_width_left = 8
border_width_top = 8
border_color = Color( 0.337255, 0.25098, 0.392157, 1 )

[node name="GUI" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.870588, 0.847059, 0.811765, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBoxContainer" type="VBoxContainer" parent="MainMarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0
rect_min_size = Vector2( 0, 50 )
custom_constants/separation = 0
alignment = 1

[node name="TitleContainer" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer"]
margin_right = 960.0
margin_bottom = 35.0
custom_styles/panel = SubResource( 1 )

[node name="TitleCenterContainer" type="CenterContainer" parent="MainMarginContainer/MainVBoxContainer/TitleContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 959.0
margin_bottom = 35.0

[node name="TitleLabel" type="Label" parent="MainMarginContainer/MainVBoxContainer/TitleContainer/TitleCenterContainer"]
margin_left = 408.0
margin_right = 549.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.188235, 0.172549, 0.180392, 1 )
text = "TIC TAC TOE"
align = 1

[node name="ScoreContainer" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer"]
margin_top = 35.0
margin_right = 960.0
margin_bottom = 109.0
custom_styles/panel = SubResource( 2 )

[node name="ScoreMarginContainer" type="MarginContainer" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer"]
margin_left = 1.0
margin_right = 959.0
margin_bottom = 74.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ScoreCenterContainer" type="CenterContainer" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 950.0
margin_bottom = 66.0

[node name="ScoreHBoxContainer" type="HBoxContainer" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer"]
margin_left = 385.0
margin_right = 557.0
margin_bottom = 58.0

[node name="XPanelContainer" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer/ScoreHBoxContainer"]
margin_right = 84.0
margin_bottom = 58.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="XHBoxContainer" type="HBoxContainer" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer/ScoreHBoxContainer/XPanelContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 76.0
margin_bottom = 54.0

[node name="XControl" type="Control" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer/ScoreHBoxContainer/XPanelContainer/XHBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
mark = 1
x_color = Color( 0.352941, 0.32549, 0.32549, 1 )
o_color = Color( 0.352941, 0.32549, 0.32549, 1 )

[node name="XScoreLabel" type="Label" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer/ScoreHBoxContainer/XPanelContainer/XHBoxContainer"]
margin_left = 54.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.188235, 0.172549, 0.180392, 1 )
text = "0"

[node name="OPanelContainer" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer/ScoreHBoxContainer"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 58.0
custom_styles/panel = SubResource( 4 )

[node name="OHBoxContainer" type="HBoxContainer" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer/ScoreHBoxContainer/OPanelContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 76.0
margin_bottom = 54.0

[node name="OScoreLabel" type="Label" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer/ScoreHBoxContainer/OPanelContainer/OHBoxContainer"]
margin_top = 8.0
margin_right = 14.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.188235, 0.172549, 0.180392, 1 )
text = "0"
__meta__ = {
"_editor_description_": ""
}

[node name="OControl" type="Control" parent="MainMarginContainer/MainVBoxContainer/ScoreContainer/ScoreMarginContainer/ScoreCenterContainer/ScoreHBoxContainer/OPanelContainer/OHBoxContainer"]
margin_left = 18.0
margin_right = 68.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
script = ExtResource( 4 )
mark = 2
x_color = Color( 0.352941, 0.32549, 0.32549, 1 )
o_color = Color( 0.352941, 0.32549, 0.32549, 1 )

[node name="BoardContainer" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer"]
margin_top = 109.0
margin_right = 960.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="BoardMarginContainer" type="MarginContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer"]
margin_left = 1.0
margin_right = 959.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="BoardHBoxContainer" type="HBoxContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 942.0
margin_bottom = 410.0

[node name="LeftSeparator" type="VSeparator" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer"]
margin_right = 183.0
margin_bottom = 394.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = SubResource( 6 )

[node name="GridContainer" type="GridContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer"]
margin_left = 187.0
margin_right = 738.0
margin_bottom = 394.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3
script = ExtResource( 1 )

[node name="PanelContainer1" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_right = 183.0
margin_bottom = 131.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 7 )
script = ExtResource( 4 )

[node name="PanelContainer2" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_left = 183.0
margin_right = 366.0
margin_bottom = 131.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )
script = ExtResource( 4 )

[node name="PanelContainer3" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_left = 366.0
margin_right = 549.0
margin_bottom = 131.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 9 )
script = ExtResource( 4 )

[node name="PanelContainer4" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_top = 131.0
margin_right = 183.0
margin_bottom = 262.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 10 )
script = ExtResource( 4 )

[node name="PanelContainer5" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_left = 183.0
margin_top = 131.0
margin_right = 366.0
margin_bottom = 262.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 11 )
script = ExtResource( 4 )

[node name="PanelContainer6" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_left = 366.0
margin_top = 131.0
margin_right = 549.0
margin_bottom = 262.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 12 )
script = ExtResource( 4 )

[node name="PanelContainer7" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_top = 262.0
margin_right = 183.0
margin_bottom = 393.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 13 )
script = ExtResource( 4 )

[node name="PanelContainer8" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_left = 183.0
margin_top = 262.0
margin_right = 366.0
margin_bottom = 393.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 14 )
script = ExtResource( 4 )

[node name="PanelContainer9" type="PanelContainer" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer/GridContainer"]
show_behind_parent = true
margin_left = 366.0
margin_top = 262.0
margin_right = 549.0
margin_bottom = 393.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 15 )
script = ExtResource( 4 )

[node name="RightSeparator" type="VSeparator" parent="MainMarginContainer/MainVBoxContainer/BoardContainer/BoardMarginContainer/BoardHBoxContainer"]
margin_left = 742.0
margin_right = 926.0
margin_bottom = 394.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = SubResource( 6 )
